# vidtone-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt
.agents/: project-map.md  skill.md
.agents/spec/: plan2.md
apps/: __init__.py
apps/api/: main.py
apps/streamlit/: main.py
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: main.tsx  styles.css
docs/: DEPLOY.md  FIREWORKS_SETUP.md  architecture.md  demo-video-script.md  project-plan.md  slides-outline.md  submission-checklist.md  submission-content.md  web-stack.md
prompts/: __init__.py  caption_prompts.py  judge_prompts.py
scripts/: dev.sh
vidtone/: __init__.py
vidtone/agents/: __init__.py  caption_agent.py  judge_agent.py  vision_agent.py
vidtone/clients/: __init__.py  fireworks_client.py
vidtone/core/: __init__.py  batch.py  config.py  pipeline.py  segments.py
vidtone/interfaces/: __init__.py  cli.py
vidtone/processing/: __init__.py  video_processor.py
vidtone/storage/: __init__.py  exporter.py
