[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vidtone-agent"
version = "0.1.0"
description = "Multi-style video captioning with self-judging AI."
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
vidtone = "vidtone.interfaces.cli:main"

[tool.setuptools.packages.find]
include = ["vidtone*", "prompts*", "apps*"]
